--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOGO DA VELHA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-
+    <div id="tab">
+        <div class="line">
+            <div class="square" id="1"></div>
+            <div class="square" id="2"></div>
+            <div class="square" id="3"></div>
+        </div>
+        <div class="line">
+            <div class="square" id="4"></div>
+            <div class="square" id="5"></div>
+            <div class="square" id="6"></div>        
+        </div>
+        <div class="line">
+            <div class="square" id="7"></div>
+            <div class="square" id="8"></div>
+            <div class="square" id="9"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
