--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
             <div class="square" id="9"></div>
         </div>
     </div>
+    <button id="reset">REINICIAR</button>
     <script src="script.js"></script>
 </body>
 </html>
